<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_analysis">

    <fragment
        android:id="@+id/navigation_analysis"
        android:name="com.example.amharicocr.ui.analysis.AnalysisFragment"
        android:label="@string/analysis"
        tools:layout="@layout/analysis_fragment" />

    <fragment
        android:id="@+id/navigation_editor"
        android:name="com.example.amharicocr.ui.editor.Editor"
        android:label="@string/title_edior"
        tools:layout="@layout/editor_fragment" />
    <fragment
        android:id="@+id/navigation_documents"
        android:name="com.example.amharicocr.ui.documents.DocumentsFragment"
        android:label="@string/title_documents"
        tools:layout="@layout/documents_fragment" />
<!--    <fragment-->
<!--        android:id="@+id/navigation_notifications"-->
<!--        android:name="com.example.test_tab.ui.notifications.NotificationsFragment"-->
<!--        android:label="@string/title_notifications"-->
<!--        tools:layout="@layout/fragment_notifications" />-->
</navigation>