<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="General">

        <!--in below line we are creating a list preference
            and we are adding default selected value in list for 3 rd index-->
        <!--dialog title is to set title for our dialog box
            entries is used to add list of data which we
            are adding from our strings file
            entry values is to add values to our entries.
            key is use to add key to our list preferences
            summary is use to add description to our option
            title is use to add title to our list preferences.-->
        <!--this list preference is for remind me option-->
        <ListPreference
            android:defaultValue="am"
            android:dialogTitle="@string/languages"
            android:entries="@array/pref_languages"
            android:entryValues="@array/pref_languages_value"
            android:key="@string/languages_key"
            android:title="@string/languages" />

        <!--on below line we are creating a switch preference
            default value is use to set switch on or off
            key is use to set key
            title is use to add title to our switch-->
        <!--this switch preference option is to remind for a bed time-->
<!--        <SwitchPreference-->
<!--            android:defaultValue="false"-->
<!--            android:key="@string/remind_me_for_bed_time"-->
<!--            android:title="@string/remind_for_bed_time" />-->

        <!--below switch preference is
            use for mobile data usage-->
<!--        <SwitchPreference-->
<!--            android:defaultValue="false"-->
<!--            android:key="@string/limit_data_usage"-->
<!--            android:summary="@string/stream_video"-->
<!--            android:title="@string/limit_mobile_usage" />-->

        <!--below list preference is use for
            double tap to seek option-->
        <ListPreference
            android:defaultValue="10"
            android:dialogTitle="@string/font_size"
            android:entries="@array/pref_font_size"
            android:entryValues="@array/pref_font_size_values"
            android:key="@string/font_size_key"
            android:title="@string/font_size" />

        <!--below option is use to create a list
            preference for Upload preferences-->
<!--        <ListPreference-->
<!--            android:defaultValue="1"-->
<!--            android:dialogTitle="@string/uploads"-->
<!--            android:entries="@array/pref_uploads"-->
<!--            android:entryValues="@array/pref_duration"-->
<!--            android:key="@string/pref_uploads"-->
<!--            android:summary="@string/specify_network_prefs"-->
<!--            android:title="Uploads" />-->

<!--        &lt;!&ndash;below switch preferences is use to restrict mode&ndash;&gt;-->
<!--        <SwitchPreference-->
<!--            android:defaultValue="false"-->
<!--            android:key="@string/prefs_restricted_mode"-->
<!--            android:summary="@string/restricated_mode"-->
<!--            android:title="@string/restricated_mode_description" />-->

<!--        &lt;!&ndash;below switch pref is use for enable stats option&ndash;&gt;-->
<!--        <SwitchPreference-->
<!--            android:defaultValue="false"-->
<!--            android:key="@string/prefs_enable_stats"-->
<!--            android:title="@string/enable_stats" />-->

    </PreferenceCategory>
</PreferenceScreen>